# argus

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run.sh
config/: quadrotor.yaml  target.yaml
include/argus_esdf/: VoxelGrid.hpp
include/argus_mpc/: QuadrotorMpc.hpp
ros2/argus_mapping/: CMakeLists.txt  package.xml
ros2/argus_mapping/msg/: EsdfGrid.msg
ros2/argus_mapping/src/: argus_mapping_node.cpp
ros2/argus_px4_bridge/: CMakeLists.txt  package.xml  run_sitl.sh
ros2/argus_px4_bridge/doc/: README.md
ros2/argus_px4_bridge/launch/: argus_sitl.launch.py
ros2/argus_px4_bridge/rviz/: argus.rviz
ros2/argus_px4_bridge/src/: argus_bridge_node.cpp
ros2/argus_px4_bridge/worlds/: argus_box_world.sdf
scripts/: animate_xy.py  config.py  generate_mpc.py  quadrotor_model.py
src/: TargetSimulator.hpp  mpc_controller.cpp  plant_dynamics.cpp  plant_dynamics.hpp
src/argus_esdf/: VoxelGrid.cpp
src/argus_mpc/: QuadrotorMpc.cpp
tests/: test_quadrotor_mpc.cpp  test_voxel_grid.cpp
