<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>argus_mapping</name>
  <version>0.1.0</version>
  <description>Builds an occupancy grid + Euclidean distance field (argus_esdf) from the PX4 bridge's depth camera and odometry, and publishes it for argus_px4_bridge to query.</description>
  <maintainer email="bruno_pinto90@hotmail.com">bruno</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>px4_ros_com</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
